# yololo

./: .gitignore  Cargo.toml  README.md
frontend/: package-lock.json  package.json  vue.config.js
frontend/public/: index.html
frontend/src/: App.vue  main.js  routes.js
frontend/src/components/: Navbar.vue  Sidebar.vue  UserDropdown.vue
frontend/src/views/: FileList.vue  ImageList.vue
src/: dialog.rs  lib.rs  main.rs
src/components/: files.rs  mod.rs  routes.rs  structs.rs  utils.rs
src/web/: index.html
src/web/js/: app.00a72a29.js  app.00a72a29.js.map  chunk-vendors.8a6362c1.js  chunk-vendors.8a6362c1.js.map
webview-sys/: gtk.rs
