[package]
name = "yololo"
version = "0.3.0"
authors = ["Sungjoon Kim <ted@bitflow.ai>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/Boscop/web-view"
description = "Rust bindings for webview, a tiny cross-platform library to render web-based GUIs for desktop applications"
keywords = ["yolo", "label", "labelimg", "yololabel", "deep learning"]
categories = ["gui", "web-programming", "api-bindings", "rendering", "visualization"]
exclude = []
edition = "2018"

[dependencies]
diesel = "1.4.4"
dotenv = "0.15.0"
actix-web = "3"
actix-rt = "0.2"
actix-form-data = "0.5"
actix-multipart = "0.2"
futures = "0.3.1"
mime_guess = "2.0.1"
rust-embed = "5.9.0"
sanitize-filename = "0.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
urlencoding = "1.0"
webview-sys = "0.6.1"
boxfnonce = "0.1"
tinyfiledialogs = "3.3.9"
image = "0.23.13"
jammdb = "0.4.0"

[features]
edge = ["webview-sys/edge"]

[dev-dependencies]
grep = "0.2.4"
walkdir = "2.3.1"
